tenants/jh-project-shared/s3/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: s3
    app.kubernetes.io/name: s3
    app.kubernetes.io/instance: s3
  name: s3
  namespace: jh-project-shared
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: api
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: console
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: s3
    app.kubernetes.io/name: s3
    app.kubernetes.io/instance: s3
  sessionAffinity: None
  type: ClusterIP
